--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "opusscript": "0.0.6",
     "youtube-node": "^1.3.2",
     "ytdl-core": "^0.28.2"
+  },
+  "engines": {
+    "node": "6.11"
   }
 }
