--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js"
+    "start":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "ffmpeg-binaries": "^4.0.0",
     "opusscript": "0.0.6",
     "youtube-node": "^1.3.2",
-    "ytdl-core": "^0.28.2"
+    "ytdl-core": "^0.28.2",
+    "nodemon": "^1.19.3"
   },
   "engines": {
     "node": "6.11"
